fix: increases the z-index for focus element

--- a/components/vf-tree/vf-tree.scss
+++ b/components/vf-tree/vf-tree.scss
@@ -81,6 +81,7 @@
   &:hover,
   &:focus {
     text-decoration: underline;
+    z-index: 8000;
   }
 }
 
